--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -128,6 +128,12 @@ h6 {
     font-size: 3em;
 }
 
+.banner h4 {
+    margin: 0;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    font-size: 1.5em;
+}
+
 .banner ul {
     margin-bottom: 0;
 }
