--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -129,9 +129,9 @@ h6 {
 }
 
 .banner h4 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    margin: 0;    
     font-size: 1.5em;
+    color: black;
 }
 
 .banner ul {
