--- a/css/workshops-page.css
+++ b/css/workshops-page.css
@@ -128,6 +128,17 @@ h6 {
     font-size: 3em;
 }
 
+.banner h3 {
+    margin: 30px;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+}
+
+.banner h4 {
+    margin: 0;
+    font-size: 1.5em;
+    color: black;
+}
+
 .banner ul {
     margin-bottom: 0;
 }
